--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,8 @@ services:
       - build-web
     
     networks:
-      - reverse-proxy_proxy-net
+      reverse-proxy_proxy-net:
+        ipv4_address: 172.24.0.4
 
     volumes:
       - ./output:/usr/share/nginx/html
